2001-07-20  Sam Steingold  <sds@gnu.org>

	* pathname.d (SUBST_RECURSE): new macro
	(subst_coerce_normal_ss, subst_common_case, subst_logical_case,
	subst_customary_case): use it
	(make-pathname): logical arguments do not override :CASE :COMMON

2001-07-19  Sam Steingold  <sds@gnu.org>

	* list.d (ldiff): handle dotted lists correctly [bug #442739]

2001-07-16  Sam Steingold  <sds@gnu.org>

	* version.h: 2.27 is released

2001-07-16  Sam Steingold  <sds@gnu.org>

	* stream.d (previous_line_virtual): fixed an off-by-one error

2001-07-16  Sam Steingold  <sds@gnu.org>

	* defstruct.lisp (defstruct): warn when the slot accessor shadows
	the predicate (i.e., when the slot is named "P")

2001-07-13  Bruno Haible  <haible@clisp.cons.org>

	* io.d (char_reader): do not search for hyphens.

2001-07-13  Sam Steingold  <sds@gnu.org>

	* stream.d (bitbuff_is_I): fixed the bin i/o for (signed-byte n)
	with n>32 on LITTLE_ENDIAN architecture

2001-07-12  Sam Steingold  <sds@gnu.org>

	abstracted some code
	* stream.d (bitbuff_iu_I, bitbuff_is_I): new functions
	(read-integer): use them
	(rd_by_iu_I): use bitbuff_iu_I()
	(rd_by_is_I): use bitbuff_is_I()
	(bitbuff_ixu_sub, bitbuff_ixs_sub): new functions
	(write-integer): use them
	(wr_by_ixu_sub): use bitbuff_ixu_sub()
	(wr_by_ixs_sub): use bitbuff_ixs_sub()

2001-07-11  Sam Steingold  <sds@gnu.org>

	YAPT (yet another pathname tweak)
	* pathname.d (lslashp): removed, replaced with slashp
	(looks_logical_p): new local function
	(parse-namestring): with *PARSE-NAMESTRING-ANSI* non-nil, parse as
	logical when pathname contains ";" - this is what others do
	(merge-pathnames): merge to logical even when only one is logical
	(make-pathname): coerce defaults to logical when the path is
	logical already

2001-07-10  Sam Steingold  <sds@gnu.org>

	* encoding.d, hashtabl.d, stream.d: unified some error messages

2001-07-10  Sam Steingold  <sds@gnu.org>

	finished the 2001-06-21 patch